client/src/theme/styles/components/global/forms/_list-filter.scss
// NB: There may be more than one of these in the future,
// but for the time being, this is specific to the inline
// Search + dropdown filters on the frontend
.form-list-filter {
  // Height Defined in em units to be responsive to type size
  $inputHeight: 2.857em;
  display: block;
  padding-bottom: 26px;
  font-size: 0;

  @include respond($break90) {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: space-between;
  }

  .resource-totals + & {
    padding-top: 40px;
  }

  input[type='text'] {
    @include templateHead;
    width: 100%;
    height: $inputHeight;
    padding-right: 15px;
    padding-left: 15px;
    font-size: 14px;
    color: $neutral75;
    letter-spacing: 0.01em;
    background-color: $neutral05;
    border: 0;

    .bg-neutral05 & {
      background-color: transparent;
      border: 2px solid $neutral30;
    }
  }

  .search-input {
    position: relative;
    display: inline-block;
    width: 100%;

    @include respond($break75) {
      width: 70%;
    }

    @include respond($break95) {
      width: 40%;
    }

    .search-button {
      @include buttonUnstyled;
      position: absolute;
      top: 10px;
      left: 14px;
      font-size: 13px;
      color: $neutral75;

      &:focus {
        color: $accentPrimary;
      }
    }

    input[type='text'] {
      padding-left: 40px;

      &:focus {
        outline: 0;
      }
    }
  }

  .select-group {
    position: relative;
    display: block;
    max-width: 100%;
    padding-top: 15px;
    margin-left: -10px;

    + .select-group {
      margin-top: 25px;

      @include respond($break90) {
        margin-top: 0;
        margin-left: 0;
      }
    }

    @include respond($break90) {
      display: flex;
    }

    label {
      @include utilityPrimary;
      position: absolute;
      top: 0;
      left: 10px;
      font-size: 13px;
      color: $neutral50;
    }

    &.inline {
      margin-bottom: 0;

      @include respond($break75) {
        display: block;
        width: 100%;
      }

      @include respond($break95) {
        display: inline-block;
        width: 60%;
        padding-top: 0;
        margin-top: 0;
        white-space: nowrap;
      }


      .select {
        margin-top: 0;
      }

      .select + .select {
        margin-top: 10px;

        @include respond($break75) {
          margin-top: 0;
        }
      }
    }

    .select {
      position: relative;
      width: 100%;
      margin-top: 10px;
      margin-left: 10px;

      @include respond($break75) {
        display: inline-block;
        width: 200px;

        .form-search-filter & {
          width: 100%;
        }
      }

      select {
        @include unstyledSelect;
        @include utilityPrimary;
        width: 100%;
        height: $inputHeight;
        padding-right: 32px;
        padding-left: 13px;
        font-size: 14px;
        color: $neutral50;
        border: 2px solid $neutral30;
        transition: border-color $duration $timing;

        &:focus {
          border-color: $focusPrimary;
        }

        .form-search-filter & {
          font-size: 13px;
          border: 1px solid #555;
        }

        option {
          color: $neutralBlack;
        }
      }

      &__icon {
        position: absolute;
        top: 50%;
        right: 12px;
        color: $accentPrimary;
        pointer-events: none;
        transform: translateY(-50%);

        // Use native dropdown arrow in IE9
        .ie9 & {
          display: none;
        }
      }
    }
  }

  .reset-button {
    @include buttonUnstyled;
    @include utilityPrimary;
    margin-top: 8px;
    font-size: 14px;
    color: $neutral40;

    &:focus {
      color: $accentPrimary;
    }
  }
}

